# SubBridge

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  update-profile.yml
examples/: liberty.sample.json
src/subbridge/: __main__.py  cli.py  downloader.py  generator.py  models.py
src/subbridge/providers/: liberty.py
tests/: test_generator.py  test_liberty.py
